# cellcog_python

./: README.md  SKILL.md  package-lock.json  package.json  pyproject.toml
cellcog/: __init__.py  auth.py  chat.py  client.py  config.py  exceptions.py  files.py  message_formatter.py  message_processor.py  version_detection.py
cellcog/daemon/: __init__.py  delivery.py  main.py  state.py
cellcog/docs/: api_reference.md  support.md
examples/: basic_usage.py  file_handling.py  sync_usage.py  workflow_usage.py
skills/brand-cog/: SKILL.md
skills/cellcog/: SKILL.md
skills/cine-cog/: SKILL.md
skills/crypto-cog/: SKILL.md
skills/data-cog/: SKILL.md
skills/docs-cog/: SKILL.md
skills/document-cog/: SKILL.md
skills/fin-cog/: SKILL.md
skills/game-cog/: SKILL.md
skills/insta-cog/: SKILL.md
skills/learn-cog/: SKILL.md
skills/meme-cog/: SKILL.md
skills/music-cog/: SKILL.md
skills/pod-cog/: SKILL.md
skills/proto-cog/: SKILL.md
skills/resume-cog/: SKILL.md
skills/slides-cog/: SKILL.md
skills/think-cog/: SKILL.md
skills/travel-cog/: SKILL.md
skills/tube-cog/: SKILL.md
skills/video-cog/: SKILL.md
