[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellcog"
version = "1.3.0"
description = "Python SDK for CellCog - Any-to-Any AI for agents. Fire-and-forget pattern with WebSocket notifications."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CellCog", email = "support@cellcog.ai"}
]
keywords = ["ai", "multimodal", "research", "video", "image", "pdf", "openclaw", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://cellcog.ai"
Documentation = "https://cellcog.ai/developer/docs"
Repository = "https://github.com/CellCog/cellcog_python"
Issues = "https://github.com/CellCog/cellcog_python/issues"

[project.scripts]
cellcog-daemon = "cellcog.daemon.main:run_daemon"

[tool.hatch.build.targets.wheel]
packages = ["cellcog"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]
